# vnexpress-etl-tele-bot

./: README.md  databaser.py  docker-compose.yml  main.py  news.json  pyproject.toml  requirements.txt  run_scrape.py  run_summary.py  run_telegram.py  sender.py  summarizer.py
.github/workflows/: daily_news.yml
airflow/: Dockerfile  docker-compose.yml
airflow/dags/: newsbot_dag.py
scraper/: pipelines.py  settings.py
scraper/spiders/: vnexpress.py
